--- a/app/index.html
+++ b/app/index.html
@@ -23,8 +23,8 @@
     <meta property="fb:app_id" content="">
 
     <link rel="canonical" href="">
-    <link rel="shortcut icon" href="img/favicon.png">
-    <link rel="apple-touch-icon" href="img/favicon.png">
+    <link rel="shortcut icon" href="assets/img/favicon.png">
+    <link rel="apple-touch-icon" href="assets/img/favicon.png">
 
     <link rel="stylesheet" href="assets/css/style.css">
 
