--- a/app/index.html
+++ b/app/index.html
@@ -3,8 +3,8 @@
   <head>
 
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><![endif]-->
 
     <title>Project Name</title>
 
@@ -44,6 +44,7 @@
 
       <h1 class="logo">
         <a class="logo_link" title="Project Name" href="" role="link" tabindex="1">Project Name</a>
+        <img src="assets/img/public/logo.svg" alt="">
       </h1>
 
       <nav class="nav" role="navigation">
